@@ -2,6 +2,7 @@
 - NextAired view options
 - Episode widgets use tvshow not season posters
 - Kiosk mode
+- Lengthen fixed-width horizontal home menu when clock is disabled
 
 0.9.46
 - Add blur effect settings
